# Chipansee-Chip-8-Emulator

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: Chip8.cpp.0EE5ABC4F3DB7CD4.idx  Chip8.h.FF8A4FE22543B283.idx  Display.cpp.5861EB8AAB14C863.idx  Display.h.901B6E9843E5E281.idx  Input.cpp.0C4819F236A3F0D4.idx  Input.h.11431149B72FE972.idx  main.cpp.617EB3664487DC53.idx  test_display.cpp.60E4238C88819840.idx  test_display.cpp.E4E8C2D1E4D8981E.idx
Docs/: project_specs.md
assets/roms/: main_menu.ch8  main_menu.txt
assets/roms/test_suite/: 5-quirks.asm.txt
src/: Chip8.cpp  Chip8.h  Display.cpp  Display.h  Input.cpp  Input.h  main.cpp  test_display.cpp
tools/: disasm.py
